--- a/app/sass/_footer.scss
+++ b/app/sass/_footer.scss
@@ -9,10 +9,11 @@
     margin-bottom: 2rem;
 }
 
-.footer__tel-top {
+.footer__tel-top,
+.footer__tel-bottom {
     display: block;
-    //display: flex;
-    //justify-content: space-between;
+    display: flex;
+    justify-content: flex-start;
     margin-top: 1.5rem;
     color: white;
     // border-bottom: solid 1px rgba(255,255,255,0.5);
@@ -29,6 +30,7 @@
         font-weight: bold;
         font-family: "HSE Sans";
         color: white;
+        margin: 0;
         margin-bottom: 0;
         line-height: 1.04;
         margin-bottom: 10px;
@@ -152,15 +154,6 @@
     background-repeat: no-repeat;
     background-position: center;
     background-color: #333333;
-}
-
-.footer__tel-bottom {
-    display: block;
-    //display: flex;
-    //justify-content: space-between;
-    margin-top: 1.5rem;
-    color: white;
-    //border-bottom: solid 1px rgba(255, 255, 255, 0.5);
 }
 
 .footer__title-contact {
@@ -324,5 +317,11 @@ body.t-body {
     }
     .gallery-footer .footer__social-wrap {
         max-width: 100%;
+    }
+}
+
+@media(min-width: 1200px) {
+    .footer__top-item {
+        margin-right: 20px;
     }
 }
