--- a/app/sass/main.scss
+++ b/app/sass/main.scss
@@ -132,10 +132,10 @@ header.header__private {
 
 .header__private a.header__tel-btn {
     display: inline-block;
-    margin-right: 20px;
+    // margin-right: 20px;
     width: 32px;
     height: 32px;
-    // background-color: #2d2f33;
+    background-color: rebeccapurple;
     border-radius: 0px;
     background-image: image_url('new_hope_images/tel_black.svg');
     background-position: center;
@@ -412,10 +412,10 @@ header.header__private {
             display: block;
         }
         .header__private .header__menu-big {
-            padding-left: 0px;
-            // position: relative;
-            // left:0px;
-            // display: block;
+            // padding-left: 0px;
+            position: relative;
+            left: 0px;
+            display: block;
         }
     }
 }
@@ -718,11 +718,10 @@ header.header__private {
     stroke: transparent;
 }
 
-.new-hope-online .logo-design-link #logo-design-link-group {
-    fill: #8b8b8c;
-    transition: 0.2s;
-}
-
+// .new-hope-online .logo-design-link #logo-design-link-group {
+//     fill: #8b8b8c;
+//     transition: 0.2s;
+// }
 .new-hope-online .logo-design-link:hover #logo-design-link-group {
     fill: #000;
     opacity: 1 !important;
@@ -903,5 +902,11 @@ header.header__private {
 @media (max-width: 450px) {
     .is__hidden .header__top-arr {
         display: none !important;
+    }
+}
+
+@media (min-width: 990px) {
+    .header__private a.header__tel-btn {
+        margin-right: 20px;
     }
 }
