--- a/app/sass/_media.scss
+++ b/app/sass/_media.scss
@@ -17,9 +17,9 @@
     .header__menu-big-item {
         margin-right: 30px;
     }
-    .header__menu-small {
-        flex-flow: row wrap;
-    }
+    // .header__menu-small {
+    //     flex-flow: row wrap;
+    // }
     .header__top-left {
         align-items: center;
     }
@@ -74,8 +74,8 @@
 
 @media (max-width: 1100px) {
     .header__menu-small {
-        flex-flow: row nowrap;
-        overflow: auto;
+        overflow-x: scroll;
+        white-space: nowrap;
         margin-bottom: -10px;
         padding-bottom: 10px;
         // padding-left: 6vw;
@@ -94,6 +94,15 @@
         margin-bottom: -10px;
         padding-left: 6vw;
         margin-right: 0;
+    }
+}
+
+@media (min-width: 990px) {
+    .header__private .header__menu-big,
+    .header__private .header__menu-small {
+        overflow-x: scroll;
+        white-space: nowrap;
+        flex-flow: nowrap;
     }
 }
 
@@ -433,13 +442,13 @@
     .header__menu-big a {
         margin-right: 1.6rem;
         white-space: nowrap;
-        padding-top: 20px;
+        // padding-top: 20px;
     }
     .header__menu-small a {
         white-space: nowrap;
         white-space: nowrap;
-        padding-top: 10px;
-        padding-bottom: 20px;
+        // padding-top: 10px;
+        // padding-bottom: 20px;
     }
     .header__menu-small a:last-child {
         padding-right: 15px;
@@ -722,116 +731,115 @@
 //         align-items: center;
 //     }
 // }
-@media (max-width: 576px) {
-    .lead .lead,
-    .bigger .lead,
-    .big .lead,
-    .lead,
-    .bigger {
-        font-size: 2rem;
-    }
-    .alumni-mailing-background {
-        left: 0;
-        right: 0;
-    }
-    .features h2 {
-        font-size: 2.5rem;
-    }
-    .header__private a.header__tel-btn {
-        margin-right: 0;
-    }
-    .download__icon {
-        vertical-align: top;
-    }
-    .open__doors {
-        flex-flow: row wrap;
-    }
-    .open__doors-btns {
-        text-align: left;
-    }
-    .big {
-        padding-left: 0;
-    }
-    .button__white-onblack,
-    .button__black-onblack {
-        min-width: 100%;
-    }
-    .news__subscribe {
-        flex-flow: row wrap;
-    }
-    .graduate__slider-item {
-        margin-right: 0;
-        border: none;
-        padding: 15px;
-        margin-left: -15px;
-    }
-    .information__item-cont {
-        .information__item-slider-right {
-            right: 0%;
-        }
-        .information__item-slider-left {
-            left: 0;
-        }
-    }
-    .big__lead {
-        font-size: 2.5rem;
-        line-height: 1.21;
-        letter-spacing: normal;
-    }
-    .footer__top-item p {
-        margin-bottom: 0;
-    }
-    .footer__top-right-up {
-        margin-bottom: 0;
-    }
-    .open__doors {
-        padding: 35px 15px;
-    }
-    .news__subscribe form {
-        flex-flow: row wrap;
-    }
-    .footer__bottom {
-        flex-flow: row wrap;
-    }
-    .open__doors-name {
-        font-size: 2rem;
-        line-height: 1;
-        margin-bottom: $marginSmobile;
-    }
-    .teacher__item-about {
-        line-height: 1.5;
-    }
-    .lead .lead,
-    .bigger .lead,
-    .big .lead,
-    .lead,
-    .bigger {
-        margin-top: 0;
-    }
-    .buttons {
-        margin-bottom: 0;
-    }
-    .resourse__item {
-        margin-bottom: $marginSmobile;
-    }
-    .breadcrumbs {
-        margin-top: 0;
-    }
-    .breadcrumbs__overflow {
-        margin-bottom: 0;
-    }
-    h1 {
-        margin-top: 0;
-    }
-    h3,
-    h1.look_like_h3 {
-        margin-top: $marginS;
-    }
-    .person-information-photo {
-        margin-bottom: $marginS;
-    }
-}
-
+// @media (max-width: 576px) {
+//     .lead .lead,
+//     .bigger .lead,
+//     .big .lead,
+//     .lead,
+//     .bigger {
+//         font-size: 2rem;
+//     }
+//     .alumni-mailing-background {
+//         left: 0;
+//         right: 0;
+//     }
+//     .features h2 {
+//         font-size: 2.5rem;
+//     }
+//     .header__private a.header__tel-btn {
+//         margin-right: 0;
+//     }
+//     .download__icon {
+//         vertical-align: top;
+//     }
+//     .open__doors {
+//         flex-flow: row wrap;
+//     }
+//     .open__doors-btns {
+//         text-align: left;
+//     }
+//     .big {
+//         padding-left: 0;
+//     }
+//     .button__white-onblack,
+//     .button__black-onblack {
+//         min-width: 100%;
+//     }
+//     .news__subscribe {
+//         flex-flow: row wrap;
+//     }
+//     .graduate__slider-item {
+//         margin-right: 0;
+//         border: none;
+//         padding: 15px;
+//         margin-left: -15px;
+//     }
+//     .information__item-cont {
+//         .information__item-slider-right {
+//             right: 0%;
+//         }
+//         .information__item-slider-left {
+//             left: 0;
+//         }
+//     }
+//     .big__lead {
+//         font-size: 2.5rem;
+//         line-height: 1.21;
+//         letter-spacing: normal;
+//     }
+//     .footer__top-item p {
+//         margin-bottom: 0;
+//     }
+//     .footer__top-right-up {
+//         margin-bottom: 0;
+//     }
+//     .open__doors {
+//         padding: 35px 15px;
+//     }
+//     .news__subscribe form {
+//         flex-flow: row wrap;
+//     }
+//     .footer__bottom {
+//         flex-flow: row wrap;
+//     }
+//     .open__doors-name {
+//         font-size: 2rem;
+//         line-height: 1;
+//         margin-bottom: $marginSmobile;
+//     }
+//     .teacher__item-about {
+//         line-height: 1.5;
+//     }
+//     .lead .lead,
+//     .bigger .lead,
+//     .big .lead,
+//     .lead,
+//     .bigger {
+//         margin-top: 0;
+//     }
+//     .buttons {
+//         margin-bottom: 0;
+//     }
+//     .resourse__item {
+//         margin-bottom: $marginSmobile;
+//     }
+//     .breadcrumbs {
+//         margin-top: 0;
+//     }
+//     .breadcrumbs__overflow {
+//         margin-bottom: 0;
+//     }
+//     h1 {
+//         margin-top: 0;
+//     }
+//     h3,
+//     h1.look_like_h3 {
+//         margin-top: $marginS;
+//     }
+//     .person-information-photo {
+//         margin-bottom: $marginS;
+//     }
+// }
 @media (max-width: 450px) {
     h1 {
         font-size: 3rem;
