added hader_top and header_menu components

--- a/app/sass/_media.scss
+++ b/app/sass/_media.scss
@@ -446,7 +446,6 @@
     }
     .header__menu-small a {
         white-space: nowrap;
-        white-space: nowrap;
         // padding-top: 10px;
         // padding-bottom: 20px;
     }
@@ -892,15 +891,15 @@
     .header__private a.header__tel-btn {
         margin-right: 0;
     }
-    .header__private .header__top-arr {
-        margin-left: 0;
-    }
-    .header__private .header__top-logo-hse {
-        margin-right: 10px;
-    }
-    .header__private .header__top-left-line {
-        margin-right: 0;
-    }
+    // .header__private .header__top-arr {
+    //     margin-left: 0;
+    // }
+    // .header__private .header__top-logo-hse {
+    //     margin-right: 10px;
+    // }
+    // .header__private .header__top-left-line {
+    //     margin-right: 0;
+    // }
 }
 
 // fonts
