--- a/app/sass/main.scss
+++ b/app/sass/main.scss
@@ -196,18 +196,16 @@ header.header__private {
     }
 }
 
-.lab_header .header__private .header__menu-big a {
-    margin-right: 20px;
-    &:last-child {
-        margin-right: 0;
-    }
-}
-
-.lab_header .header__top {
-    padding-top: 8px;
-    padding-bottom: 8px;
-}
-
+// .lab_header .header__private .header__menu-big a {
+//     margin-right: 20px;
+//     &:last-child {
+//         margin-right: 0;
+//     }
+// }
+// .lab_header .header__top {
+//     padding-top: 8px;
+//     padding-bottom: 8px;
+// }
 .header__private .header__menu-small {
     display: flex;
     justify-content: flex-start;
@@ -231,128 +229,125 @@ header.header__private {
     display: none;
 }
 
-.art__light {
-    .header__private {
-        .header__top {
-            background: white;
-            border-bottom: 1px solid rgba(0, 0, 0, 0.3)
-        }
-        .header__top-right {
-            display: none;
-        }
-        .header__menu {
-            border-bottom: solid 1px rgba(0, 0, 0, 0.3);
-        }
-    }
-    h1.h1__logo {
-        margin-top: 0;
-    }
-    header+.js__block-item.widgets_header {
-        margin-top: $marginL + $marginM;
-    }
-    a.header__top-logo-school-regular {
-        display: none;
-    }
-    a.header__top-logo-art {
-        opacity: 0.2;
-        transition: 0.2s;
-        &:hover {
-            opacity: 1;
-        }
-    }
-    .header__private div.header__top-logo-school-light {
-        display: inline-block;
-        img:nth-child(1) {
-            margin-right: 5px;
-        }
-    }
-}
-
-.lab_header {
-    .header__private .header__menu-big {
-        margin-bottom: 0px;
-    }
-    .header__private .header__menu-big a {
-        margin-bottom: 0px;
-    }
-    .header__top-hole.header__private {
-        height: 70px;
-    }
-    .header__private {
-        .header__top {
-            background: white;
-            border-bottom: 1px solid #d1d1d1;
-        }
-    }
-    .header__top-logo-school {
-        margin-right: 20px;
-    }
-    .header__top-container {
-        display: flex;
-        justify-content: space-between;
-    }
-    .header__top-middle {
-        flex: 1;
-        display: flex;
-        justify-content: flex-start;
-    }
-    a.header__top-logo-school-regular {
-        display: none;
-    }
-    a.header__top-logo-art {
-        opacity: 0.2;
-        transition: 0.2s;
-        &:hover {
-            opacity: 1;
-        }
-    }
-    a.header__top-logo-school-regular {
-        display: none;
-    }
-    .header__private div.header__top-logo-school-light {
-        display: inline-block;
-        img:nth-child(1) {
-            margin-right: 5px;
-        }
-    }
-    .header__private .header__lang {
-        color: $black;
-    }
-    .header__menu-big-item {
-        border-bottom: 3px solid white;
-        font-size: 1.2rem;
-        font-family: "HSE Sans";
-        color: $black;
-        font-weight: 600;
-        line-height: 1.2;
-        letter-spacing: normal;
-        margin-right: 45px;
-        padding-top: 5px;
-        padding-left: 5px;
-        padding-right: 5px;
-        &:hover {
-            color: grey;
-        }
-        &:last-child {
-            margin-right: 0;
-        }
-    }
-    .header__menu-big-item.active {
-        border-bottom: 3px solid black;
-        padding-left: 5px;
-        padding-right: 5px;
-    }
-}
-
-.lab_header .is__hidden .header__menu-big {
-    animation: none;
-}
-
+// .art__light {
+//     .header__private {
+//         .header__top {
+//             background: white;
+//             border-bottom: 1px solid rgba(0, 0, 0, 0.3)
+//         }
+//         .header__top-right {
+//             display: none;
+//         }
+//         .header__menu {
+//             border-bottom: solid 1px rgba(0, 0, 0, 0.3);
+//         }
+//     }
+//     h1.h1__logo {
+//         margin-top: 0;
+//     }
+//     header+.js__block-item.widgets_header {
+//         margin-top: $marginL + $marginM;
+//     }
+//     a.header__top-logo-school-regular {
+//         display: none;
+//     }
+//     a.header__top-logo-art {
+//         opacity: 0.2;
+//         transition: 0.2s;
+//         &:hover {
+//             opacity: 1;
+//         }
+//     }
+//     .header__private div.header__top-logo-school-light {
+//         display: inline-block;
+//         img:nth-child(1) {
+//             margin-right: 5px;
+//         }
+//     }
+// }
+// .lab_header {
+//     .header__private .header__menu-big {
+//         margin-bottom: 0px;
+//     }
+//     .header__private .header__menu-big a {
+//         margin-bottom: 0px;
+//     }
+//     .header__top-hole.header__private {
+//         height: 70px;
+//     }
+//     .header__private {
+//         .header__top {
+//             background: white;
+//             border-bottom: 1px solid #d1d1d1;
+//         }
+//     }
+//     .header__top-logo-school {
+//         margin-right: 20px;
+//     }
+//     .header__top-container {
+//         display: flex;
+//         justify-content: space-between;
+//     }
+//     .header__top-middle {
+//         flex: 1;
+//         display: flex;
+//         justify-content: flex-start;
+//     }
+//     a.header__top-logo-school-regular {
+//         display: none;
+//     }
+//     a.header__top-logo-art {
+//         opacity: 0.2;
+//         transition: 0.2s;
+//         &:hover {
+//             opacity: 1;
+//         }
+//     }
+//     a.header__top-logo-school-regular {
+//         display: none;
+//     }
+//     .header__private div.header__top-logo-school-light {
+//         display: inline-block;
+//         img:nth-child(1) {
+//             margin-right: 5px;
+//         }
+//     }
+//     .header__private .header__lang {
+//         color: $black;
+//     }
+//     .header__menu-big-item {
+//         border-bottom: 3px solid white;
+//         font-size: 1.2rem;
+//         font-family: "HSE Sans";
+//         color: $black;
+//         font-weight: 600;
+//         line-height: 1.2;
+//         letter-spacing: normal;
+//         margin-right: 45px;
+//         padding-top: 5px;
+//         padding-left: 5px;
+//         padding-right: 5px;
+//         &:hover {
+//             color: grey;
+//         }
+//         &:last-child {
+//             margin-right: 0;
+//         }
+//     }
+//     .header__menu-big-item.active {
+//         border-bottom: 3px solid black;
+//         padding-left: 5px;
+//         padding-right: 5px;
+//     }
+// }
+// .lab_header .is__hidden .header__menu-big {
+//     animation: none;
+// }
 @media (max-width: 1000px) {
-    .lab_header .header__private .is__hidden .header__menu-big {
-        animation-name: header__menu-upper_lab;
-        animation-duration: 0.5s;
-    }
+    // .lab_header .header__private .is__hidden .header__menu-big {
+    //     animation-name: header__menu-upper_lab;
+    //     animation-duration: 0.5s;
+    // }
     @keyframes header__menu-upper_lab {
         from {
             position: relative;
@@ -363,63 +358,63 @@ header.header__private {
             top: -70px;
         }
     }
-    .lab_header {
-        .header__private .container-fluid__menu {
-            // padding-bottom: .5rem;
-            // padding-top: .5rem;
-        }
-        .header__top-hole.header__private {
-            height: 80px;
-        }
-        .header__top-container {
-            flex-wrap: wrap;
-        }
-        .header__top-middle {
-            order: 3;
-            width: 100%;
-        }
-        .header__top-left {
-            width: 50%;
-        }
-        .header__top-right {
-            justify-content: flex-end;
-            width: 50%;
-        }
-    }
+    // .lab_header {
+    //     .header__private .container-fluid__menu {
+    //         // padding-bottom: .5rem;
+    //         // padding-top: .5rem;
+    //     }
+    //     .header__top-hole.header__private {
+    //         height: 80px;
+    //     }
+    //     .header__top-container {
+    //         flex-wrap: wrap;
+    //     }
+    //     .header__top-middle {
+    //         order: 3;
+    //         width: 100%;
+    //     }
+    //     .header__top-left {
+    //         width: 50%;
+    //     }
+    //     .header__top-right {
+    //         justify-content: flex-end;
+    //         width: 50%;
+    //     }
+    // }
 }
 
 @media (max-width: 990px) {
-    .lab_header {
-        // margin-bottom: 50px;
-        .header__top-left {
-            width: 100%;
-        }
-        .header__top-middle {
-            order: 3;
-            width: 100%;
-        }
-        .header__top-right {
-            display: block;
-            position: fixed;
-            right: 6vw;
-            top: 10px;
-            left: auto;
-            text-align: right;
-            width: 20px;
-            .header__lang {
-                margin-right: 0px;
-            }
-        }
-        .header__top-container {
-            display: block;
-        }
-        .header__private .header__menu-big {
-            // padding-left: 0px;
-            position: relative;
-            left: 0px;
-            display: block;
-        }
-    }
+    // .lab_header {
+    //     // margin-bottom: 50px;
+    //     .header__top-left {
+    //         width: 100%;
+    //     }
+    //     .header__top-middle {
+    //         order: 3;
+    //         width: 100%;
+    //     }
+    //     .header__top-right {
+    //         display: block;
+    //         position: fixed;
+    //         right: 6vw;
+    //         top: 10px;
+    //         left: auto;
+    //         text-align: right;
+    //         width: 20px;
+    //         .header__lang {
+    //             margin-right: 0px;
+    //         }
+    //     }
+    //     .header__top-container {
+    //         display: block;
+    //     }
+    //     .header__private .header__menu-big {
+    //         // padding-left: 0px;
+    //         position: relative;
+    //         left: 0px;
+    //         display: block;
+    //     }
+    // }
 }
 
 .header__private .header__menu-small-item-right {
@@ -708,10 +703,9 @@ header.header__private {
     pointer-events: bounding-box;
 }
 
-.new-hope-online .header__private .header__menu-big a.active {
-    border-bottom: 2px solid #0000FF;
-}
-
+// .new-hope-online .header__private .header__menu-big a.active {
+//     border-bottom: 2px solid #0000FF;
+// }
 .new-hope-online .logo-online-link #logo-online-link-stroke {
     transition: 0.2s;
 }
@@ -779,17 +773,17 @@ header.header__private {
         margin-bottom: $marginSmobile;
         margin-top: $marginLmobile;
     }
-    .art__light .header__private div.header__top-logo-school-light {
-        display: flex;
-    }
-    .art__light .header__private div.header__top-logo-school-light img:nth-child(1) {
-        height: 10px;
-        margin-right: 7px;
-    }
-    .art__light a.header__top-logo-art {
-        opacity: 1;
-        margin-left: 7px;
-    }
+    // .art__light .header__private div.header__top-logo-school-light {
+    //     display: flex;
+    // }
+    // .art__light .header__private div.header__top-logo-school-light img:nth-child(1) {
+    //     height: 10px;
+    //     margin-right: 7px;
+    // }
+    // .art__light a.header__top-logo-art {
+    //     opacity: 1;
+    //     margin-left: 7px;
+    // }
     .lab_header+.first_level.js__block-item.widgets_header {
         margin-top: 10rem;
     }
@@ -802,13 +796,13 @@ header.header__private {
 }
 
 @media (max-width: 576px) {
-    .lab_header .header__private .header__menu-big {
-        width: calc( 100vw);
-        margin-left: -6vw;
-        margin-right: -6vw;
-        padding-left: calc( 6vw - 9px);
-        padding-right: calc( 6vw - 9px);
-    }
+    // .lab_header .header__private .header__menu-big {
+    //     width: calc( 100vw);
+    //     margin-left: -6vw;
+    //     margin-right: -6vw;
+    //     padding-left: calc( 6vw - 9px);
+    //     padding-right: calc( 6vw - 9px);
+    // }
     .header__menu-big a:last-child {
         padding-right: calc( 6vw);
     }
@@ -912,12 +906,11 @@ header.header__private {
     }
 }
 
-@media (max-width: 450px) {
-    .is__hidden .header__top-arr {
-        display: none !important;
-    }
-}
-
+// @media (max-width: 450px) {
+//     .is__hidden .header__top-arr {
+//         display: none !important;
+//     }
+// }
 @media (min-width: 990px) {
     .header__private a.header__tel-btn {
         margin-right: 20px;
