--- a/app/sass/header_menu.scss
+++ b/app/sass/header_menu.scss
@@ -154,7 +154,7 @@
     .footer_private .header__menu-overflow {
         overflow: hidden;
         margin-right: -6vw;
-        margin-left: -6vw;
+        // margin-left: -6vw;
         -webkit-overflow-scrolling: touch;
     }
     // .header__private .header__menu-big,
