--- a/app/css/header_menu.css
+++ b/app/css/header_menu.css
@@ -95,6 +95,9 @@
   padding-bottom: 30px;
   color: rgba(255, 255, 255, 0.8); }
 
+.footer_private .footer {
+  margin-top: 0; }
+
 .footer__top {
   margin-bottom: 2rem; }
 
@@ -348,6 +351,13 @@ body.t-body {
   -moz-osx-font-smoothing: grayscale;
   -webkit-font-smoothing: antialiased; }
 
+.footer_private .container-fluid {
+  max-width: 1600px; }
+
+.footer_private .footer__top-item p {
+  margin-top: 0;
+  font-size: 16px; }
+
 @media (max-width: 1600px) {
   .footer__menu-top {
     font-size: 1.3rem;
@@ -495,7 +505,6 @@ body.t-body {
   .footer_private .header__menu-overflow {
     overflow: hidden;
     margin-right: -6vw;
-    margin-left: -6vw;
     -webkit-overflow-scrolling: touch; } }
 
 @media (max-width: 1200px) {
