--- a/app/sass/_footer.scss
+++ b/app/sass/_footer.scss
@@ -5,6 +5,10 @@
     color: rgba(255, 255, 255, 0.8);
 }
 
+.footer_private .footer {
+    margin-top: 0;
+}
+
 .footer__top {
     margin-bottom: 2rem;
 }
@@ -301,6 +305,15 @@ body.t-body {
     line-height: 1.5;
     -moz-osx-font-smoothing: grayscale;
     -webkit-font-smoothing: antialiased;
+}
+
+.footer_private .container-fluid {
+    max-width: 1600px;
+}
+
+.footer_private .footer__top-item p {
+    margin-top: 0;
+    font-size: 16px;
 }
 
 @media(max-width: 1600px) {
