--- a/app/sass/_media.scss
+++ b/app/sass/_media.scss
@@ -845,9 +845,9 @@
         margin-bottom: 0;
         text-transform: none;
     }
-    .is__hidden .header__top-arr {
-        display: none !important;
-    }
+    // .is__hidden .header__top-arr {
+    //     display: none !important;
+    // }
     .news__social {
         .button {
             font-size: 1rem;
