--- a/app/css/header_menu.css
+++ b/app/css/header_menu.css
@@ -382,6 +382,10 @@ body.t-body {
   background: white;
   position: relative; }
 
+.header__private .header__menu-overflow,
+.footer_private .header__menu-overflow {
+  overflow: hidden; }
+
 .header__private .header__menu-big {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -420,7 +424,16 @@ body.t-body {
           justify-content: flex-start;
   margin-bottom: 25px;
   white-space: nowrap;
-  overflow-x: scroll; }
+  overflow-x: scroll;
+  overflow-y: hidden;
+  -webkit-transition: all 0.2s;
+  transition: all 0.2s;
+  will-change: transform;
+  -webkit-user-select: none;
+     -moz-user-select: none;
+      -ms-user-select: none;
+          user-select: none;
+  cursor: pointer; }
   .header__private .header__menu-small a {
     font-family: 'HSESansRegular';
     margin-right: 1.4rem;
@@ -456,7 +469,7 @@ body.t-body {
 
 .header__private .header__menu-small::-webkit-scrollbar,
 .header__private .header__menu-big::-webkit-scrollbar {
-  width: 0; }
+  display: none; }
 
 @media (max-width: 576px) {
   .header__menu-big a:last-child {
@@ -465,14 +478,6 @@ body.t-body {
 @media (min-width: 930px) and (max-width: 990px) {
   .header__private .header__menu-big {
     padding-bottom: 35px; } }
-
-@media (min-width: 990px) {
-  .header__private .header__menu-big,
-  .header__private .header__menu-small {
-    overflow-x: scroll;
-    white-space: nowrap;
-    -ms-flex-flow: nowrap;
-        flex-flow: nowrap; } }
 
 @media (max-width: 990px) {
   .header__private .header__menu-small,
@@ -491,21 +496,14 @@ body.t-body {
   .header__menu-small a:last-child {
     padding-right: 15px; } }
 
-@media (min-width: 1100px) {
-  .header__private .header__menu-small {
-    margin-bottom: 5px; } }
-
 @media (max-width: 1100px) {
   .header__menu-small {
-    overflow-x: scroll;
-    white-space: nowrap;
     margin-bottom: -10px;
-    padding-bottom: 10px; }
+    padding-bottom: 30px; }
   .header__private .header__menu-overflow,
   .footer_private .header__menu-overflow {
     overflow: hidden;
-    margin-right: -6vw;
-    -webkit-overflow-scrolling: touch; } }
+    margin-right: -6vw; } }
 
 @media (max-width: 1200px) {
   .header__menu-big {
