--- a/app/sass/_footer.scss
+++ b/app/sass/_footer.scss
@@ -331,10 +331,37 @@ body.t-body {
     .gallery-footer .footer__social-wrap {
         max-width: 100%;
     }
+    .footer__top-item {
+        width: 100%;
+        margin-left: 0;
+        margin-top: 10px;
+        margin-bottom: 20px;
+        text-align: left;
+        font-size: 1.6rem;
+    }
 }
 
 @media(min-width: 1200px) {
     .footer__top-item {
         margin-right: 20px;
+    }
+}
+
+@media (max-width: 1200px) {
+    .footer__top-item {
+        width: 100%;
+        margin-left: 0;
+    }
+    .footer__top-right-up,
+    .footer__top-right-down {
+        flex-flow: row wrap;
+    }
+    .footer__top,
+    .footer__tel-top {
+        flex-flow: row wrap;
+    }
+    .footer__tel-bottom {
+        margin-left: 0;
+        flex-flow: row wrap;
     }
 }
