--- a/app/sass/main.scss
+++ b/app/sass/main.scss
@@ -51,7 +51,7 @@
             display: inline-block;
             width: 32px;
             height: 32px;
-            background-color: rebeccapurple;
+            // background-color: rebeccapurple;
             border-radius: 0px;
             background-image: image_url('new_hope_images/tel_black.svg');
             background-position: center;
