--- a/app/css/header_menu.css
+++ b/app/css/header_menu.css
@@ -599,10 +599,12 @@ body.t-body {
     padding-right: 15px; } }
 
 @media (max-width: 1100px) {
-  .header__menu-small {
+  .header__private .header__menu-small {
     overflow-x: scroll;
     white-space: nowrap;
     margin-bottom: -10px; }
+  .header__private .header__menu-big {
+    padding-bottom: 20px !important; }
   .header__private .header__menu-overflow,
   .footer_private .header__menu-overflow {
     overflow: hidden; } }
