--- a/app/sass/header_menu.scss
+++ b/app/sass/header_menu.scss
@@ -156,8 +156,6 @@
     }
     .header__menu-small a {
         white-space: nowrap;
-        // padding-top: 10px;
-        // padding-bottom: 20px;
     }
     .header__menu-small a:last-child {
         padding-right: 15px;
@@ -167,8 +165,6 @@
             flex-flow: row nowrap;
             overflow: auto;
             margin-bottom: -10px;
-            // padding-bottom: 10px;
-            // padding-left: 6vw;
             margin-right: 0;
         }
         .header__menu-big a {
@@ -188,10 +184,14 @@
 }
 
 @media (max-width: 1100px) {
-    .header__menu-small {
+    .header__private .header__menu-small {
         overflow-x: scroll;
         white-space: nowrap;
         margin-bottom: -10px;
+        // padding-bottom: 20px;
+    }
+    .header__private .header__menu-big {
+        padding-bottom: 20px !important;
     }
     .header__private .header__menu-overflow,
     .footer_private .header__menu-overflow {
